<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bus Timing</string>
    <string name="menu_settings">Settings</string>
    <string name="from_campus">From Campus</string>
    <string name="to_campus">To Campus</string>
    <string name="empty"></string>
    <string name="demo_bus_time"></string>
    <string name="context_menu_refresh">Now</string>
    <string name="loc_GH">IIT Campus</string>
    <string name="loc_PB">Pan Bazar</string>
    <string name="title_activity_about">About</string>
    <string name="pub_info">©2012  xLabs ( kAd technologies )</string>
    <string name="app_credits">Developer: Rahul Kadyan</string>
    <string name="app_info">Version 1.2*</string>
    <string name="app_support">Bus timings for IIT Guwahati Bus Service as per bus schedule 01/04/2010.  Holidays as per IIT Guwahati calendar 2013.</string>
    <string name="options_menu_about">About</string>
    <string name="title_activity_buses_for_day">Buses Today</string>
    <string name="title_activity_bus_for_day">Buses Today: From Campus</string>
    <string name="loc_JB">Jalukbari</string>
    <string name="loc_GHk">Kameng Hostel</string>
    <string name="loc_KH">Kameng Hostel</string>
    <string name="loc_ADMN">Admin Building</string>
    <string name="loc_NM">Noonmati</string>
    <string name="loc_SM">Sixmile</string>
    <string name="loc_Beltola">Beltola Tiniali</string>
    <string name="loc_Noonmati">Noonmati</string>
    <string name="loc_Sixmile">Sixmile</string>
    <string name="title_activity_bus_to_day">Buses Today: To Campus</string>
    <string name="title_activity_bus_haults">Bus Route</string>
    <string name="loc_ABB">Adabari bus stand</string>
    <string name="loc_ABC">Assam Bengal Carriers</string>
    <string name="loc_AC">Academic Complex IITG</string>
    <string name="loc_AG">Amingaon (Near Cilarai Park)</string>
    <string name="loc_AM">Ambari</string>
    <string name="loc_ARC">Anuradha Cinema</string>
    <string name="loc_AT">Adabari Tiniali</string>
    <string name="loc_BC">Beltola Chariali</string>
    <string name="loc_BG">Bhanga Grah</string>
    <string name="loc_BHM">Bharalumukh (R. Phukan Park)</string>
    <string name="loc_BM">Bamuni Maindan</string>
    <string name="loc_BT">Beltola Tiniali</string>
    <string name="loc_CAS">Chandmari Auto Stand</string>
    <string name="loc_CC">Comerece College</string>
    <string name="loc_CPP">Chandmari Police Point</string>
    <string name="loc_ComC">Comercial Complex</string>
    <string name="loc_GG">Ganesh Guri (near Car Ghar)</string>
    <string name="loc_GM">Ganesh Mandir</string>
    <string name="loc_HAH">Hatigaon Assembly Hostel Jn.</string>
    <string name="loc_HOS">Hostels</string>
    <string name="loc_JG">Jayguru</string>
    <string name="loc_KM">Kamakhya (near Guwahati Nursery)</string>
    <string name="loc_LN">Lachit Nagar</string>
    <string name="loc_LG">Last Gate</string>
    <string name="loc_MG">Maligaon (near Bombay Dyeing)</string>
    <string name="loc_NH">National Highway</string>
    <string name="loc_PBWT">Panbazar Water Tank</string>
    <string name="loc_PBOB">Panbazar Over Bridge</string>
    <string name="loc_PLB">Paltan Bazar</string>
    <string name="loc_QRS">Quarters: F, E, E, C, B/A Types</string>
    <string name="loc_SB">Sarab Bhati</string>
    <string name="loc_SH">Subansiri</string>
    <string name="loc_SGL">Silpukhuri Gandhibasti Link</string>
    <string name="loc_SP">Sundarpur</string>
    <string name="loc_SUM">Super Market</string>
    <string name="loc_SV">Survey</string>
    <string name="loc_SZ">State Zoo</string>
    <string name="loc_TC">Technical Complex, IITG</string>
    <string name="loc_UB">Ulubari (near Agri. Office)</string>
    <string name="loc_UBL">Uzanbazar Latasil Field</string>
    <string name="options_specbus">Other</string>
    <string name="title_activity_special_buses">Other Buses</string>
    <string name="spebustext">Not available on institute holidays</string>
    <string name="options_find_bus">Find</string>
    <string name="options_holidays">Holidays</string>
    <string name="title_activity_holidays">Holidays</string>
    <string name="loc_KV"/>
    <string name="loc_SAC"/>

</resources>